alignment solved

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -63,7 +63,7 @@ a:hover, a:focus {
 .border-bottom-mg-bt-top {
   border-bottom: 1px solid $border-color !important;
   margin-bottom: 20px;
-  margin-top: 20px;
+  margin-top: 50px;
 }
 //
 //.dataTable{
@@ -503,7 +503,7 @@ code {
 .ibox-content {
   background-color: $ibox-content-bg;
   color: inherit;
-  padding: 15px 20px 20px 20px;
+  padding: 15px 10px 20px 10px;
   border-color: $border-color;
   border-image: none;
   border-style: solid solid none;
