--- a/app/assets/stylesheets/base/custom.scss
+++ b/app/assets/stylesheets/base/custom.scss
@@ -166,6 +166,13 @@
   display: none;
 }
 
+div.dataTables_length label {
+  float: left;
+  text-align: left;
+  font-weight: normal;
+  padding-left: 8px;
+}
+
 @media (min-width: 768px) {
   /* line 204, /home/subir/.rvm/gems/ruby-2.2.1/gems/bootstrap-sass-3.3.0.0/assets/stylesheets/bootstrap/_dropdowns.scss */
   .navbar-right .dropdown-menu {
